Fix issues for theme submission
Changes in this commit:

* make use of the mainSections variable to display multiple content
types dynamically on the homepage instead of enforcing the posts type

* fix formatting issues in the head.html partial

* disable link to imprint in footer

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 {{ $dateFormat := $.Site.Params.dateFormat | default "Jan 2, 2006" }}
-{{ $posts := where .Pages.ByDate.Reverse "Section" "posts" }}
+{{ $posts := where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{ $paginator := .Paginate (after 1 $posts) 3 }}
 
 <div class="collection">
