--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,26 +4,29 @@
 
 <div class="container">
   <div class="post">
-    <div class="post-header">
-      <h1 class="maintitle">
-        {{ .Title }}
-      </h1>
-      <h2 class="subtitle lightText">
-        {{ .Description }}
-      </h2>
+    <div class="post-header row">
+      <div class="title-tile col-md-6">
+        <h1 class="maintitle">
+          {{ .Title }}
+        </h1>
+        <h2 class="subtitle lightText">
+          {{ .Description }}
+        </h2>
 
-      <div class="clearfix lightText">
-        <i class="icon ion-md-calendar"></i> {{ dateFormat $dateFormat .Date }}
+        <div class="clearfix lightText">
+          <i class="icon ion-md-calendar"></i> {{ dateFormat $dateFormat .Date }}
+        </div>
       </div>
-
-      <div class="figure">
-        <img class="img-fluid" src="{{ absURL (default "images/default-img-header.jpeg" (default .Params.image .Params.thumbnail)) }}" alt="figure" />
+      <div class="figure col-md-6">
+        <img class="img-fluid"
+          src="{{ absURL (default "images/default-img-header.jpeg" (default .Params.image .Params.thumbnail)) }}"
+          alt="figure" />
       </div>
     </div>
 
     <div class="post-content">
 
-        {{ .Content }}
+      {{ .Content }}
 
     </div>
   </div>
