--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 {{ $dateFormat := $.Site.Params.dateFormat | default "Jan 2, 2006" }}
-{{ $posts := where site.RegularPages "Type" "in" site.Params.mainSections }}
+{{ $posts := where .Pages.ByDate.Reverse "Section" "posts" }}
 {{ $paginator := .Paginate (after 1 $posts) 3 }}
 
 <div class="collection">
